--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: postgres:13.3
     container_name: server_dbase
     environment:
-      POSTGRES_DB: "server_dbase"
+      POSTGRES_DB: "%env(DB_NAME)%"
       POSTGRES_USER: "%env(DB_USERNAME)%"
       POSTGRES_PASSWORD: "%env(DB_PASSWORD)%"
       PGDATA: "/var/lib/postgresql/data/server_dbase"
