--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-
 fastapi==0.79.0
-orjson==3.9.7
 pydantic==1.9.0
 uvicorn==0.18.2
-uvloop==0.17.0
-
+python-dotenv==1.0.0
 SQLAlchemy==1.4.41
 SQLAlchemy-Utils==0.38.3
 asyncpg==0.26.0
@@ -12,6 +9,5 @@ psycopg2-binary==2.9.3
 databases[postgresql]==0.6.1
 validators==0.22.0
 pytest==7.4.2
-httpx
-sqlmodel
-trio
+httpx==0.25.0
+sqlmodel==0.0.8
