--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_PASSWORD: "${DB_PASSWORD}"
       PGDATA: "/var/lib/postgresql/data/server_dbase"
     volumes:
-      - .:/docker-entrypoint-initdb.d
-      - .:/var/lib/postgresql/data
+      - ..:/docker-entrypoint-initdb.d
+      - ..:/var/lib/postgresql/data
     ports:  
       - "${DB_PORT}:5432"
